examples/fail/semantic/struct_missing_field.bina
// EXPECT_SEMANTIC_ERROR: missing initializer for field
struct Point {
    pub x: float64;
    pub y: float64;
}

fn main() -> int {
    let p = Point { x: 1.0 };
    return 0;
}
